# cjm-fasthtml-lucide-icons

./: README.md  core.html  core.html.md  factory.html  factory.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml  utils.html  utils.html.md
cjm_fasthtml_lucide_icons/: _modidx.py  core.py  factory.py  utils.py
cjm_fasthtml_lucide_icons/registry/: categories.py  icons.py  tags.py
nbs/: core.ipynb  factory.ipynb  index.ipynb  nbdev.yml  utils.ipynb
nbs/registry/: categories.ipynb  icons.ipynb  tags.ipynb
registry/: categories.html  categories.html.md  icons.html  icons.html.md  tags.html  tags.html.md
scripts/: generate_registry.py
