[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cjm-fasthtml-lucide-icons"
dynamic = ["version"]
description = "Lucide icons as FastHTML SVG components with category/tag registry and factory API."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [{name = "Christian J. Mills", email = "9126128+cj-mills@users.noreply.github.com"}]
keywords = ['nbdev', 'jupyter', 'notebook', 'python']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = ['python-fasthtml']

[project.urls]
Repository = "https://github.com/cj-mills/cjm-fasthtml-lucide-icons"
Documentation = "https://cj-mills.github.io/cjm-fasthtml-lucide-icons"

[project.entry-points.nbdev]
cjm_fasthtml_lucide_icons = "cjm_fasthtml_lucide_icons._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "cjm_fasthtml_lucide_icons.__version__"}

[tool.setuptools.packages.find]
include = ["cjm_fasthtml_lucide_icons"]

[tool.nbdev]
